# libstrophe

./: Makefile.am  configure.ac
